fixed bugs with long messages
added line breaks on long text, max width for messages, and finnaly min height to be fit content, this is not a sound feature but i found these bugs while i was fixing sound and i found solutions to be easy , i dont think they need a branch of their own

--- a/src/App.css
+++ b/src/App.css
@@ -157,13 +157,16 @@ p {
   position: relative;
   color: white;
   text-align: center;
+  max-width: 70%;
+  overflow-wrap: break-word;
 }
 
 .message {
   display: flex;
   align-items: center;
   margin-top: 1px;
-  min-height: 9.5vh;
+  margin-bottom: 1px;
+  min-height: fit-content;
 }
 
 .sent {
